[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aoc"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.17"
pathfinding = "4.8.0"
phf = { version = "0.11.2", features = ["macros"] }
rayon = "1.8.0"
